# FIS_project1_SS26

./: .gitattributes  .gitignore  cg_matrix_msr_1.txt  cg_matrix_msr_2.txt  gmres_matrix_msr.txt  pyproject.toml  temp.txt
msr_test/: msr_test_non_symmetric.txt  msr_test_symmetric.txt
report/: main.typ  template.typ  theory.typ
src/: lib.py  main.py
src/lib/: cg.py  gmres.py  misc.py
src/tests/: test_algs.py  test_msr.py
