[project]
name = "fis-project1-ss26"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.11.0",
    "numba>=0.65.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pytest>=9.1.1",
    "scipy>=1.18.0",
    "scipy-stubs>=1.18.0.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
#addopts = "-ra -q"
addopts = "-v"
testpaths = ["src/tests"]
pythonpath = ["src"]
